--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
 RewriteEngine On
 
-RewriteRule  ^$ web/    [L]
-RewriteRule  (.*) web/$1 [L]
+RewriteBase /web
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule .* index.php?$0 [PT,L,QSA]
