--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,5 @@
 RewriteEngine On
 
-RewriteBase /web
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule .* index.php?$0 [PT,L,QSA]
+RewriteRule  ^$ web/    [L]
+RewriteRule  (.*) web/$1 [L]
